Changelog
~~~~~~~~~~~~~~~~~
17-4-2021: Added test item and block

18-4-2021: Removed test item and block, added the beginnings of an aluminium tool system.

8-5-2021: Finished aluminium and silicon system, but left silicon ore texture unfinished.

11-5-2021: Finished silicon ore texture, added CPU.