@@ -8,10 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 0.0.1
+	mod_version = 0.2.4
 	maven_group = com.additions
 	archives_base_name = AdditionsMC-fabric
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.32.5+1.16
+	fabric_version=0.34.2+1.16
