@@ -7,3 +7,5 @@ Changelog
 8-5-2021: Finished aluminium and silicon system, but left silicon ore texture unfinished.
 
 11-5-2021: Finished silicon ore texture, added CPU.
+
+14-5-2021: Fixed custom ore generation; successfully ran Minecraft on a browser through replit.com.
